--- a/client/src/Components/Navbar/index.css
+++ b/client/src/Components/Navbar/index.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100vw;
-    background-color: rgb(30, 66, 119);              
+    width: 98.5vw;
+    background-image: url("/public/images/desktop-wallpaper-blue-plain-backgrounds-backgrounds-plain-android.jpg");
+background-size: cover;     
     margin-bottom: 0px;
     align-items: center;
 
