--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -14,6 +14,7 @@
     height: 84vh;
     overflow-y: auto;
     overflow-x: hidden;
+    background-size: cover;
 }
 
 .sidebar-profile-container {
@@ -32,6 +33,13 @@
     padding-left: 10px;
     font-size: 2vw;
 }
+.back-button{
+    background-color: transparent;
+    border: none;
+    font-size: 2vw;
+    color: white;
+    margin-bottom: auto;
+}
 
 .sidebar-profil-icon{
     font-size: 1.4vw;
@@ -44,8 +52,41 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-
 }
+.sidebar-profile-icon {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px; /* Adjust size as needed */
+    height: 50px; /* Adjust size as needed */
+    border: 2px solid white; /* Solid round border */
+    border-radius: 50%; /* Makes the border round */
+    font-size: 20px; /* Adjust font size as needed */
+    text-align: center;
+    line-height: 50px; /* Center text vertically */
+  }
+  
+  .status-dot {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background-color: green; 
+    border-radius: 50%; 
+    top: 38px; 
+    right: 5px; 
+  }
+
+  .unread-count{
+    background-color: green;
+    font-size: 0.8vw;
+    height: 20px;
+    width: 20px;
+    color: white;
+    border-radius: 50%;
+    text-align: center;
+    margin-left: 1vw;
+  }
 
 .sidebar-profil-container-inactive,  .sidebar-profil-container-active{
     display: flex;
@@ -95,6 +136,15 @@
 .dashboard-chat-container > * {
     position: relative; /* Ensure the child elements are above the pseudo-element */
     z-index: 1;
+}
+
+.last-seen{
+    font-size: 1vw;
+}
+.last-seen-online{
+    font-size: 1vw;
+    color: green;
+    font-weight: bold;
 }
 
 
